--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -13,18 +13,18 @@ TERM = "xterm-256color"
 columns = 130
 lines = 35
 
-[font.bold]
-family = "JetBrainsMono Nerd Font Mono"
-style = "Bold"
-
-[font.bold_italic]
-family = "JetBrainsMono Nerd Font Mono"
-style = "Bold Italic"
-
-[font.italic]
-family = "JetBrainsMono Nerd Font Mono"
-style = "Italic"
-
-[font.normal]
-family = "JetBrainsMono Nerd Font Mono"
-style = "Regular"
+# [font.bold]
+# family = "JetBrainsMono Nerd Font Mono"
+# style = "Bold"
+# 
+# [font.bold_italic]
+# family = "JetBrainsMono Nerd Font Mono"
+# style = "Bold Italic"
+# 
+# [font.italic]
+# family = "JetBrainsMono Nerd Font Mono"
+# style = "Italic"
+# 
+# [font.normal]
+# family = "JetBrainsMono Nerd Font Mono"
+# style = "Regular"
