--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -247,7 +247,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, togglesplit, # dwindle
+
 bind = SUPER, W, exec, pkill waybar || waybar
 bind = SUPER, N, exec, ~/wallpaper "$(wl-paste -n)"
 
@@ -262,6 +263,16 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
+bind = $mainMod CTRL, H, resizeactive, -10 0
+bind = $mainMod CTRL, L, resizeactive, 10 0
+bind = $mainMod CTRL, K, resizeactive, 0 -10
+bind = $mainMod CTRL, J, resizeactive, 0 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
