--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -269,10 +269,10 @@ bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
-bind = $mainMod CTRL, H, resizeactive, -10 0
-bind = $mainMod CTRL, L, resizeactive, 10 0
-bind = $mainMod CTRL, K, resizeactive, 0 -10
-bind = $mainMod CTRL, J, resizeactive, 0 10
+binde = $mainMod CTRL, H, resizeactive, -10 0
+binde = $mainMod CTRL, L, resizeactive, 10 0
+binde = $mainMod CTRL, K, resizeactive, 0 -10
+binde = $mainMod CTRL, J, resizeactive, 0 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
