--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -215,6 +215,10 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    tablet {
+        output = HDMI-A-1
+      }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
