--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,7 +60,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = dunst
@@ -213,12 +213,12 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+      natural_scroll = false
     }
 
     tablet {
-        output = HDMI-A-1
-      }
+      output = current
+    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
@@ -250,6 +250,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, G, exec, cat ~/personal/my_git_key_lmao.txt | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 
