--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,7 +18,23 @@ set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 # # set desired theme options...
 # set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
 
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'aserowy/tmux.nvim'
+# navigation
+set -g @tmux-nvim-navigation true
+set -g @tmux-nvim-navigation-cycle true
+set -g @tmux-nvim-navigation-keybinding-left 'C-h'
+set -g @tmux-nvim-navigation-keybinding-down 'C-j'
+set -g @tmux-nvim-navigation-keybinding-up 'C-k'
+set -g @tmux-nvim-navigation-keybinding-right 'C-l'
+
+# resize
+set -g @tmux-nvim-resize true
+set -g @tmux-nvim-resize-step-x 1
+set -g @tmux-nvim-resize-step-y 1
+set -g @tmux-nvim-resize-keybinding-left 'M-h'
+set -g @tmux-nvim-resize-keybinding-down 'M-j'
+set -g @tmux-nvim-resize-keybinding-up 'M-k'
+set -g @tmux-nvim-resize-keybinding-right 'M-l'
 
 # True color settings
 set -g default-terminal "tmux-256color"
