updated to use kitty as the default terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,8 +45,8 @@ workspace=10, monitor:HDMI-A-1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
-# $terminal = kitty
+# $terminal = alacritty
+$terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
