--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,6 +40,8 @@ set -g @tmux-nvim-resize-keybinding-right 'M-l'
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+set -g allow-passthrough on
+
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
