--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ shell_integration enabled
 
 scrollback_pager nvim
 # kitty-scrollback.nvim Kitten alias
-action_alias kitty_scrollback_nvim kitten /home/sivansh/.local/share/nvim/site/pack/core/opt/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+action_alias kitty_scrollback_nvim kitten /home/sivansh/.local/share/kitty/site/pack/core/opt/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --env NVIM_APPNAME=kitty --nvim-args -n
 # Browse scrollback buffer in nvim
 map kitty_mod+h kitty_scrollback_nvim
 # Browse output of the last shell command in nvim
