--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -28,6 +28,7 @@ map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
+include ./kitty-themes/themes/gruvbox_dark.conf
 
 # BEGIN_KITTY_FONTS
 font_family      family="JetBrainsMono Nerd Font Mono"
