--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,8 +5,8 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
+# set -g @plugin 'rose-pine/tmux'
+# set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 
 
 # set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
@@ -14,9 +14,9 @@ set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 # Add '-xterm' to the back of the name for xterm256 compatibility
 # E.g. 'dark-medium-xterm'
 
-# set -g @plugin 'egel/tmux-gruvbox'
-# # set desired theme options...
-# set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+set -g @plugin 'egel/tmux-gruvbox'
+# set desired theme options...
+set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
 
 set -g @plugin 'aserowy/tmux.nvim'
 # navigation
