removed hyprpaper for swwww

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,10 +61,9 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = hyprpaper
+exec-once = ~/scripts/set_wallpaper
 exec-once = waybar
 exec-once = dunst
-exec-once = ~/update_wallpaper ~/.wallpapers/default.jpg
 
 
 #############################
