--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -106,8 +106,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 0
-    rounding_power = 0
+    rounding = 10
+    rounding_power = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 0.95
@@ -132,7 +132,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = no, please :)
+    enabled = yes, please :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -221,9 +221,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -242,9 +242,11 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, B, exec, google-chrome-stable
+bind = $mainMod, B, exec, firefox
 bind = $mainMod, C, killactive,
+bind = $mainMod, Y, exec, youtube-music
 bind = $mainMod, M, exit,
+bind = $mainMod, D, exec, vesktop
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
@@ -253,10 +255,10 @@ bind = $mainMod, G, exec, cat ~/personal/my_git_key_lmao.txt | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 
-bind = SUPER, W, exec, pkill waybar || waybar
+bind = SUPER, W, exec, ~/.config/waybar/scripts/restart
 bind = SUPER, N, exec, ~/wallpaper "$(wl-paste -n)"
 
-bind = $mainMod, PRINT, exec, hyprshot -m output
+bind = , PRINT, exec, hyprshot -m output
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
